--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1488,107 +1488,107 @@ stories:
   domain: http://www.hidesertstar.com/
   link: http://www.hidesertstar.com/image_8590ae70-2901-11ea-a0c6-d7eccb22ae6c.html
 images:
-- name: stalin-time-highway-granary_36331800650_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-highway-granary_36331800650_o.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-atari-missle.jpg
-- name: lincoln-memorial-lincolnmemorial-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-deep-connections.jpg
-- name: miamibeach-miamibeach-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-satan-red.jpg
-- name: locked-up-steam-lock-up-steam-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-yellow-collage.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-kand-two.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-kand-two.png
-- name: store-on-corner-store-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-smooth-ride.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-aqua.jpg
-- name: mosaic-face-mosaic-face-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purp-paper.jpg
-- name: nazi-invasion-miami-beach-tower-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-miami-beach-tower-city.jpg
-- name: window-window-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-circuit.jpg
-- name: stalin-time-working-on-railroad-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-working-on-railroad-2.jpg
-- name: curtain-curtain-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-sunday.jpg
-- name: bordercrossing-bordercrossing-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-wols.jpg
-- name: rockingchair-rockingchair-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-graham-sutherland.jpg
-- name: flower-barbed-wire-flower-barbed-wire-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-graham-sutherland.jpg
-- name: birdhouse-birdhouse-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-nazi-poster.jpg
-- name: status-berlin-status-berlin-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-copper-circuit-2.jpg
-- name: crow_smoking_cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_smoking_cigarette.jpg
-- name: bf-skinner-seattle-looking-north.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-seattle-looking-north.jpg
-- name: beach-rocks-beach-rocks-currents-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-smooth-ride.jpg
-- name: fence-fence-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-ww2-color.jpg
-- name: abandonedbuildings_colorful_blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_colorful_blocks.jpg
-- name: aws-s3-meadow-meadow-bright-sand-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-meadow-meadow-bright-sand-still-600.jpg
-- name: fence-gorilla.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla.jpg
-- name: hollywood-building-hollywood-building-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dali-two.jpg
-- name: copper-circuit-DSC_0035-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0035-2.jpg
-- name: aws-s3-desertrun-desertrun-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-desertrun-desertrun-still-1200.jpg
-- name: docks-docks-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-smoking-cigarette.jpg
-- name: copper-circuit-docks-water-front-ships-containers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-docks-water-front-ships-containers.jpg
-- name: downtown-los-angeles-downtown-la-purple-storm.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-purple-storm.JPG
-- name: nazi-invasion-DSC_0062.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0062.jpg
-- name: gypsymosaic-gypsy-eyes-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-yellow-collage.jpg
-- name: old-granary-field-oldhouse-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colorful-dream.jpg
-- name: window-window-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-space-pizza.jpg
-- name: copper-circuit-old-time-cash-register.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-time-cash-register.jpg
-- name: bf-skinner-old-gas-station_36680991076_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-gas-station_36680991076_o.jpg
-- name: old-door-lock-old-door-lock-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-monet-one.jpg
-- name: beach-rocks-beach-rocks-currents-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-marcel-duchamp.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-diego-rivera1.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-diego-rivera1.png
-- name: mosaic-face-mosaic-face-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crabapple.jpg
-- name: old-granary-field-granaryfield-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-atari-missle.jpg
-- name: stories-border-traffic.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-border-traffic.jpg
-- name: nazi-invasion-dark-hallway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dark-hallway.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-creativity.png
-- name: old-school-house-old-schoolhouse-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-yellow-paper.jpg
-- name: trucksilo-trucksilo-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-internet-numbers.jpg
-- name: old-door-lock-old-door-lock-2-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-purple-pond.jpg
-- name: blossombar-space-pizza-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-space-pizza-file-00-00-24-99.jpg
-- name: ellis-island-ellis-island-room-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-crabapple.jpg
-- name: abandonedbuildings_blue_granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_granite.jpg
+- name: powerlines-power-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-smoking-cigarette.jpg
+- name: castle-wall-DSC-0067-ww2-dresden.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-ww2-dresden.JPG
+- name: wind-mills-windmills-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-blue-circuit.jpg
+- name: oldsmallboat-oldsmallboat-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-plentiful.jpg
+- name: containership-containership-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit-5.jpg
+- name: christianity-christianity-under-construction-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-purple-pond.jpg
+- name: abandonedbuildings_sand_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_sand_paper.jpg
+- name: adam-smith-adam-smith-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-atari-missle.jpg
+- name: containership-containership-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-bright-sand.jpg
+- name: sand-hand-sand-hand-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-graham-sutherland.jpg
+- name: server-cloud-server-racks-door-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dry-skin.jpg
+- name: stories-new-42-110-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-42-110-800-500-0-max-0--5--5.jpg
+- name: scream-IMG_8352.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8352.jpg
+- name: stalin-time-border-down-the-fence-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-down-the-fence-line.jpg
+- name: christianity-christianity-under-construction-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-pablo-blue.jpg
+- name: braceros-domingo-ulloa-dark-hallway-in-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-dark-hallway-in-hotel.jpg
+- name: christianity-christianity-under-construction-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-copper-circuit.jpg
+- name: bf-skinner-jesus-in-old-rock-church.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-jesus-in-old-rock-church.jpg
+- name: mediterranean-mediterranean-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dark-rain.jpg
+- name: old-school-house-old-schoolhouse-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-smoking-cigarette.jpg
+- name: paris-paris-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-hot-spicy.jpg
+- name: copper-circuit-train-station-cloud.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-station-cloud.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-circuit-4.jpg
+- name: oldsmallboat-oldsmallboat-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-electricity.jpg
+- name: aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
+- name: docks-docks-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-neo-instinct.jpg
+- name: oldbarn-oldbarn-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-creativity.jpg
+- name: san-francisco-street-view-san-francisco-street-view-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colored-circuits.jpg
+- name: old-door-lock-old-door-lock-2-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-dali.jpg
+- name: stories-crypto-machine-bletchley-copper-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-crypto-machine-bletchley-copper-circuit.png
+- name: crow_gred_mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_gred_mash.jpg
+- name: aws-s3-stories-markets-feed-the-people-economics.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-markets-feed-the-people-economics.jpg
+- name: locked-up-steam-lock-up-steam-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purple-pond.jpg
+- name: gypsy-wagon-gypsywagon-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-ww2-color.jpg
+- name: castle-wall-DSC-0067-bright-sand.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-bright-sand.JPG
+- name: rain-princess-DSC_0001.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0001.jpg
+- name: art-museum-art-museum-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-mucha-mult.jpg
+- name: paris-paris-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-green-zuma.jpg
+- name: stalin-time-going-to-dowtown-los-angeles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-going-to-dowtown-los-angeles.jpg
+- name: dragon-desert-desert-dragon-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-blue-circuit-5.jpg
+- name: downtown-los-angeles-downtown-la-copper-circuit-2.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-copper-circuit-2.JPG
+- name: capital-battle-capitolbattle-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-bright-sand.jpg
+- name: old-granary-field-granaryfield-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-marcel-duchamp.jpg
+- name: udnie-DSC_0264.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0264.jpg
+- name: abe-lincoln-one-sand-paper-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sand-paper-file-00-00-15-87.jpg
+- name: old-school-house-old-schoolhouse-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-atari-missle.jpg
+- name: oldsmallboat-oldsmallboat-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-granite.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
+- name: rain-princess-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8494.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-rainbow-festival.jpg
+- name: crow_sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_sunday.jpg
 ---
 Caring Is Their Calling.&nbsp;Ukraine, Eastern Rebels Swap Prisoners In Move To End War.&nbsp;Hospitality Veterans Opening Joia Beach On Watson Island.&nbsp;Musicians Invited To Audition For ProMusica Arizona Chorale And Orchestra.&nbsp;Glenna Marie McDaniels Carpenter.&nbsp;Timo Meiers Hat Trick Leads Sharks Past Philadelphia Flyers.&nbsp;Daughter Helps Restore Historic North Carolina House.&nbsp;Pet Cremation Services Treat Animals Like Humans After Death.&nbsp;
